<resources>
    <string name="app_name">Lemmings</string>
    <string name="Settings">Settings</string>
    <string name="Levelselect">Start</string>
    <string name="menu">Menu</string>
    <string name="gamesounds">Toggle game sounds</string>
    <string name="music">Toggle music</string>
    <string name="vibration">Toggle vibration</string>

    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>

    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>
</resources>
