<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lemmings_background">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1"
        android:id="@+id/level1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_2"
        android:id="@+id/level2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_3"
        android:id="@+id/level3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_4"
        android:id="@+id/level4"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="260dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_5"
        android:id="@+id/level5"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="340dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_6"
        android:id="@+id/level6"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="420dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_7"
        android:id="@+id/level7"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="500dp"
        android:layout_marginStart="48dp"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_8"
        android:id="@+id/level8"
        android:layout_below="@+id/level1"
        android:layout_alignLeft="@+id/level1"
        android:layout_alignStart="@+id/level1"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_9"
        android:id="@+id/level9"
        android:layout_below="@+id/level2"
        android:layout_alignLeft="@+id/level2"
        android:layout_alignStart="@+id/level2"
        android:onClick="doLevel"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_10"
        android:id="@+id/level10"
        android:layout_below="@+id/level3"
        android:layout_alignLeft="@+id/level3"
        android:layout_alignStart="@+id/level3"
        android:onClick="doLevel"/>
</RelativeLayout>