<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lemmings_background_empty">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/music"
        android:id="@+id/textView"
        android:layout_below="@+id/musicbutton"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Music"
        android:id="@+id/musicbutton"
        android:onClick="toggleMusic"
        android:checked="true"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gamesounds"
        android:id="@+id/textView2"
        android:layout_below="@+id/gamesoundbutton"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Game sounds"
        android:id="@+id/gamesoundbutton"
        android:onClick="toggleGamesounds"
        android:checked="true"
        android:layout_alignLeft="@+id/musicbutton"
        android:layout_alignStart="@+id/musicbutton"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/musicbutton"
        android:layout_alignEnd="@+id/musicbutton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vibration"
        android:id="@+id/textView3"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vibration"
        android:id="@+id/vibrationbutton"
        android:checked="false"
        android:onClick="toggleVibrate"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/musicbutton"
        android:layout_alignStart="@+id/musicbutton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="3dp"
        android:onClick="doMenu"/>
</RelativeLayout>